--- a/my_decorators.ipynb
+++ b/my_decorators.ipynb
@@ -188,10 +188,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@timed\n",
     "@df_size_tracker\n",
     "def total_price(df):\n",
-    "    df['total_price'] = df['quantity'] * df['unit_price']\n",
-    "    return df"
+    "    dfn = df.copy()\n",
+    "    dfn['total_price'] = dfn['quantity'] * dfn['unit_price']\n",
+    "    return dfn"
    ]
   },
   {
